testcrate/ui/unresolved-type.stderr
error[E0412]: cannot find type `A` in this scope
 --> $DIR/unresolved-type.rs:8:20
  |
8 | fn foo() -> Result<A, u32> {
  |                    ^ not found in this scope
  |
  = help: there is an enum variant `futures::future::Either::A`, try using `futures::future::Either`?

error[E0412]: cannot find type `A` in this scope
  --> $DIR/unresolved-type.rs:12:23
   |
12 | #[async_stream(item = A)]
   |                       ^ not found in this scope
   |
   = help: there is an enum variant `futures::future::Either::A`, try using `futures::future::Either`?

error: aborting due to 4 previous errors

